New in 0.00.46
Removed the Ruler
Set new defaults: 5'8" 150 lbs 22 years
Changed color for draggable icon labels from yellow to tan
Fixed: Food icons should be halfway into the plate before adding them to the model

New in 0.00.45
Tooltips should always show when grabbing an item, and disappear when dropped
Renamed to Eating & Exercise
Removed "Athletic Lifestyle"
Slider text box values can go outside the slider range
Default range on graph changed to 1 year instead 5 years.  Time runs more slowly (1/4 as fast)
Made scale graphics gray

New in 0.00.42
Dragging an item back to the toolbox removes the item
Fixed: Draggable icons should disappear on simulation reset or when removed from edit dialog
Fixed: Reset all should clean up extra draggable icons

New in 0.00.41
Fixed image cropping and transparency
Fixed: BMI readout is obscured when overlapping the human outline
Added food pyramid, usable from drag and drop interface
Fixed: Drag icons should move to the front when selected
Added help icon for food pyramid
Centered items in drag toolbox
Added zoom buttons for bar chart, becomes available when bar chart becomes big enough
Removed "choose diet" wiggle-me
Added animated scrolling to toolboxes

New in 0.00.39
Moved BMI readout to near the heart
Fixed: "?" icon should move with the heart
Removed BMI readout from control panel (now near heart only)
Fixed: I think you can do without the per day label on all the foods.  One label for the box could say Base Diet per day. Then all the rest will be obvious.
Renamed "Diet" to "Foods". Diet means eating less so you can lose weight to most people.
Renamed "non" (from non-muscular) to "fat"
Fixed "muscular" label so it doesn't disappear off the panel
Changed "press play" help item to appear after adding 3 items to exercise or foods; works with new drag & drop interface
Changing gender sets fat free mass percent to the typical minimum for that gender
Fixed decimal format in tooltip readouts

New in 0.00.36
Added drag and drop